data/derived/sp14/progs/unify/prog0154.ml.out
Characters 74-79:
  then h = 0
       ^^^^^
Error: This expression has type bool but an expression was expected of type
         'a list
